--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.9' // jsps
+	runtimeOnly 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0' // helpful JSP tags
 }
 
 tasks.named('test') {
